--- a/j_js_snake.html
+++ b/j_js_snake.html
@@ -49,7 +49,7 @@
     </div>
 
     <div class="center-btn">
-      <a class="btn" href="#" download onclick="mostrarPassword(event)">  <!-- falta crear el zip y subirlo -->
+      <a class="btn" href="https://github.com/user-attachments/files/22014320/Snake.zip" download onclick="mostrarPassword(event)">
         <i class="fas fa-file-arrow-down"></i>
         <span data-i18n="btn_download"> Obtener código</span>
       </a>
