--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
       <p data-i18n="hero_tagline">Técnica en Ciencia de Datos, IA y Desarrollo Web, con amplia trayectoria en análisis
         funcional, control de calidad y soporte en ámbitos académicos y corporativos.</p>
       <div class="btns">
-        <a class="btn ghost" data-link="portfolio.html"><i class="fas fa-folder-open"></i> <span data-i18n="portafolio">
-            Portafolio</span></a>
+        <a class="btn ghost" data-link="portfolio.html"><i class="fas fa-folder-open"></i> <span>
+            Portfolio</span></a>
         <a class="btn ghost" data-link="cv_maria_laura_peralta.pdf" download><i class="fas fa-file-arrow-down"></i>
           <span data-i18n="btn_download">Descargar CV</span></a>
-        <a class="btn ghost" data-link="https://linkedin.com/in/tuusuario"><i class="fab fa-linkedin"></i> LinkedIn</a>
-        <a class="btn ghost" data-link="https://wa.me/5492644862757"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+        <a class="btn ghost" data-link="https://www.linkedin.com/in/maria-laura-peralta/"><i class="fab fa-linkedin"></i> LinkedIn</a>
+        <a class="btn ghost" data-link="https://wa.link/dq26ap"><i class="fab fa-whatsapp"></i> WhatsApp</a>
         <a class="btn ghost" data-link="#contacto"><i class="fas fa-envelope"></i> <span data-i18n="btn_contact"></a>
       </div>
     </div>
