--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
             Inicio</span></a>
         <a class="btn ghost" data-link="cv_maria_laura_peralta.pdf" download><i class="fas fa-file-arrow-down"></i>
           <span data-i18n="btn_download"> Descargar CV</span></a>
-        <a class="btn ghost" data-link="https://linkedin.com/in/tuusuario"><i class="fab fa-linkedin"></i> LinkedIn</a>
+        <a class="btn ghost" data-link="https://www.linkedin.com/in/maria-laura-peralta/"><i class="fab fa-linkedin"></i> LinkedIn</a>
         <a class="btn ghost" data-link="#contacto"><i class="fas fa-envelope"></i> <span data-i18n="btn_contact">
             Contacto</a>
       </div>
@@ -69,7 +69,7 @@
     <div class="panel">
       <div class="grid">
         <div class="card">
-          <h3 data-i18n="validar_email">Validar Mail</h3>
+          <h3 data-i18n="validar_email">Título</h3>
           <p data-i18n="validar_email_desc"> Desc</p>
           <a class="btn ghost" data-link="s_js_check_mail.html">
             <i class="fa fa-code" aria-hidden="true"></i> <span data-i18n="btn_example"> Ejemplo</span>
@@ -79,9 +79,34 @@
           </a>
         </div>
         <div class="card">
-          <h3>Clima</h3>
-          <p data-i18n="clima_desc">Script que muestra el clima (necesita permisos de ubicación).</p>
-          <a class="btn" href="s_js_clima.html" data-i18n="ver">Ver</a>
+          <h3 data-i18n="clima">Título</h3>
+          <p data-i18n="clima_desc"> Desc</p>
+          <a class="btn ghost" data-link="s_js_clima.html">
+            <i class="fa fa-code" aria-hidden="true"></i> <span data-i18n="btn_example"> Ejemplo</span>
+          </a>
+          <a class="btn ghost" href="https://github.com/user-attachments/files/22048929/Climapp.zip" download onclick="mostrarPassword(event)">
+            <i class="fas fa-file-arrow-down"></i> <span data-i18n="btn_code"> Obtener código</span>
+          </a>
+        </div>
+          <div class="card">
+          <h3 data-i18n="cronometro">Título</h3>
+          <p data-i18n="cronometro_desc"> Desc</p>
+          <a class="btn ghost" data-link="s_js_cronometro.html">
+            <i class="fa fa-code" aria-hidden="true"></i> <span data-i18n="btn_example"> Ejemplo</span>
+          </a>
+          <a class="btn ghost" href="https://github.com/user-attachments/files/22099916/Cronometro.zip" download onclick="mostrarPassword(event)">
+            <i class="fas fa-file-arrow-down"></i> <span data-i18n="btn_code"> Obtener código</span>
+          </a>
+        </div>
+        <div class="card">
+          <h3 data-i18n="firma">Título</h3>
+          <p data-i18n="firma_desc"> Desc</p>
+          <a class="btn ghost" data-link="s_js_firma.html">
+            <i class="fa fa-code" aria-hidden="true"></i> <span data-i18n="btn_example"> Ejemplo</span>
+          </a>
+          <a class="btn ghost" href="https://github.com/user-attachments/files/22106533/Firma_online.zip" download onclick="mostrarPassword(event)">
+            <i class="fas fa-file-arrow-down"></i> <span data-i18n="btn_code"> Obtener código</span>
+          </a>
         </div>
       </div>
     </div>
@@ -287,7 +312,12 @@
           ciencia_datos: 'Ciencia de Datos',
           validar_email: 'Validador de Emails',
           validar_email_desc: 'Un validador de emails en JavaScript que te dice al instante si una dirección de correo es real o un invento del momento.',
-          clima_desc: 'Script que muestra el clima (necesita permisos de ubicación).',
+          clima: 'Clima actual',
+          clima_desc: 'Verificá si necesitas salir con paraguas o anteojos de sol! 😎🌧️',
+          cronometro: 'Cronómetro',
+          cronometro_desc: 'Proba este cronómetro y convertite en un nija del tiempo! 🕒',
+          firma: 'Firma',
+          firma_desc: 'Con este script conviertirás tu mouse en una pluma mágica para crear tu firma o dibujo! 🖋️',
           ahorcado: 'Ahorcado',
           ahorcado_desc: 'Implementación sencilla y divertida del tradicional ahorcado con HTML, CSS y JavaScript.',
           memoria: 'Juego de la Memoria',
@@ -318,7 +348,12 @@
           ciencia_datos: 'Data Science',
           validar_email: 'Email Validator',
           validar_email_desc: 'An email validator in JavaScript that tells you instantly if an email address is real or an invention of the moment.',
-          clima_desc: 'Script that shows the weather (requires location permission).',
+          clima: 'Weather',
+          clima_desc: 'Check if you need to go out with an umbrella or sunglasses! 😎🌧️',
+          cronometro: 'Stopwatch',
+          cronometro_desc: 'Try this stopwatch and become a time ninja! 🕒',
+          firma: 'Signature',
+          firma_desc: 'With this script you will turn your mouse into a magic pen to create your signature or drawing! 🖋️',
           ahorcado: 'Hangman',
           ahorcado_desc: 'Simple and fun implementation of the traditional hangman using HTML, CSS and JavaScript.',
           memoria: 'Memory Game',
