--- a/Scripts_JS/cronometro/index.html
+++ b/Scripts_JS/cronometro/index.html
@@ -19,5 +19,6 @@
 		<input type="button" class="boton" id="continuar" value="Reanudar &#8634;" onclick="inicio();" disabled>
 		<input type="button" class="boton" id="reinicio" value="Reiniciar &#8635;" onclick="reinicio();" disabled>
 	</div>
+	<div id="credits"></div>
 </body>
 </html>
