--- a/Scripts_JS/firma_online/index.html
+++ b/Scripts_JS/firma_online/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Firma Online</title>
+    <title>Firma Ológrafa</title>
     <link rel="stylesheet" href="estilo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -13,7 +13,7 @@
 
 <body>
     <div class="card text-center">
-        <h5 class="card-header">Dibuje y Genere su firma hológrafa a continuación</h5>
+        <h5 class="card-header">Dibuje y Genere su firma ológrafa a continuación</h5>
         <div class="card-body">
             <canvas id="canvas"></canvas>
             <br>
@@ -22,6 +22,7 @@
             <button id="btnGenerarDocumento" class="hide">Extraer</button>
         </div>
     </div>
+    <div id="credits"></div>
     
     <br>
     <script src="script.js"></script>
