--- a/Scripts_JS/temporizador/index.html
+++ b/Scripts_JS/temporizador/index.html
@@ -35,11 +35,14 @@
 				<button id="btnPausar" class="button is-success"><span class="mdi mdi-pause"></span></button>
 				<button id="btnDetener" class="button is-success"><span class="mdi mdi-stop"></span></button>
 				<br>
+			<div id="credits"></div>
 			</div>
+			
 		</div>
 	</section>
 
 	<script src="script.js"></script>
+	
 </body>
 
 </html>
