--- a/portfolio.html
+++ b/portfolio.html
@@ -108,6 +108,46 @@
             <i class="fas fa-file-arrow-down"></i> <span data-i18n="btn_code"> Obtener código</span>
           </a>
         </div>
+        <div class="card">
+          <h3 data-i18n="cronometro_marca">Título</h3>
+          <p data-i18n="cronometro_marca_desc"> Desc</p>
+          <a class="btn ghost" data-link="s_js_cronometro_marca.html">
+            <i class="fa fa-code" aria-hidden="true"></i> <span data-i18n="btn_example"> Ejemplo</span>
+          </a>
+          <a class="btn ghost" href="https://github.com/user-attachments/files/22220754/Cronometro_banderas.zip" download onclick="mostrarPassword(event)">
+            <i class="fas fa-file-arrow-down"></i> <span data-i18n="btn_code"> Obtener código</span>
+          </a>
+        </div>
+        <div class="card">
+          <h3 data-i18n="temporizador">Título</h3>
+          <p data-i18n="temporizador_desc"> Desc</p>
+          <a class="btn ghost" data-link="s_js_temporizador.html">
+            <i class="fa fa-code" aria-hidden="true"></i> <span data-i18n="btn_example"> Ejemplo</span>
+          </a>
+          <a class="btn ghost" href="https://github.com/user-attachments/files/22222771/Temporizador.zip" download onclick="mostrarPassword(event)">
+            <i class="fas fa-file-arrow-down"></i> <span data-i18n="btn_code"> Obtener código</span>
+          </a>
+        </div>
+        <div class="card">
+          <h3 data-i18n="pass">Título</h3>
+          <p data-i18n="pass_desc"> Desc</p>
+          <a class="btn ghost" data-link="s_js_pass.html">
+            <i class="fa fa-code" aria-hidden="true"></i> <span data-i18n="btn_example"> Ejemplo</span>
+          </a>
+          <a class="btn ghost" href="https://github.com/user-attachments/files/22222321/auto_pass.zip" download onclick="mostrarPassword(event)">
+            <i class="fas fa-file-arrow-down"></i> <span data-i18n="btn_code"> Obtener código</span>
+          </a>
+        </div>
+        <div class="card">
+          <h3 data-i18n="forte_pass">Título</h3>
+          <p data-i18n="forte_pass_desc"> Desc</p>
+          <a class="btn ghost" data-link="s_js_pass2.html">
+            <i class="fa fa-code" aria-hidden="true"></i> <span data-i18n="btn_example"> Ejemplo</span>
+          </a>
+          <a class="btn ghost" href="https://github.com/user-attachments/files/22222996/Pass2.zip" download onclick="mostrarPassword(event)">
+            <i class="fas fa-file-arrow-down"></i> <span data-i18n="btn_code"> Obtener código</span>
+          </a>
+        </div>
       </div>
     </div>
 
@@ -167,10 +207,26 @@
     <div class="panel">
       <div class="grid">
         <div class="card">
-          <h3>Script Ejemplo</h3>
-          <p data-i18n="py_desc">Este es un ejemplo para probar el uso de PyScript.</p>
-          <a class="btn" href="s_py_probando_PyScript.html" data-i18n="ver">Ver</a>
+          <h3 data-i18n="down_video"> Título</h3>
+          <p data-i18n="down_video_desc"> Desc</p>
+          <a class="btn ghost" data-link="s_py_download_video.html">
+            <i class="fa fa-code" aria-hidden="true"></i> <span data-i18n="btn_ver_code"> Ver Código</span>
+          </a>
+          <a class="btn ghost" href="https://github.com/user-attachments/files/22224371/Down_video.zip" download onclick="mostrarPassword(event)">
+            <i class="fas fa-file-arrow-down"></i> <span data-i18n="btn_code"> Obtener código</span>
+          </a>
         </div>
+        <div class="card">
+          <h3 data-i18n="n_battle"> Título</h3>
+          <p data-i18n="n_battle_desc"> Desc</p>
+          <a class="btn ghost" data-link="s_py_n_battle.html">
+            <i class="fa fa-code" aria-hidden="true"></i> <span data-i18n="btn_ver_code"> Ver Código</span>
+          </a>
+          <a class="btn ghost" href="https://github.com/user-attachments/files/22225337/Naval_Battle.zip" download onclick="mostrarPassword(event)">
+            <i class="fas fa-file-arrow-down"></i> <span data-i18n="btn_code"> Obtener código</span>
+          </a>
+        </div>
+      
       </div>
     </div>
 
@@ -318,19 +374,30 @@
           cronometro_desc: 'Proba este cronómetro y convertite en un nija del tiempo! 🕒',
           firma: 'Firma',
           firma_desc: 'Con este script conviertirás tu mouse en una pluma mágica para crear tu firma o dibujo! 🖋️',
+          cronometro_marca: 'Cronómetro con Banderas',
+          cronometro_marca_desc: '¡Este script es un cronómetro ninja que inicia, pausa, marca tiempos como un pro y se reinicia con estilo! 🕒',
+          temporizador: 'Temporizador',
+          temporizador_desc: '⏳ Un temporizador simple pero potente que te avisa con sonido cuando el tiempo se acaba, ¡para que no se te pase ni un segundo!',
+          pass: 'Generador de Contraseña',
+          pass_desc: '🔐 ¡Este generador de contraseñas mezcla símbolos, letras y números como un chef experto en seguridad digital!',
+          forte_pass: 'Generador de Contraseña Configurable',
+          forte_pass_desc: 'Generador de contraseñas personalizadas que permite elegir el tipo de caracteres y copiar el resultado al portapapeles con un solo clic.',
           ahorcado: 'Ahorcado',
           ahorcado_desc: 'Implementación sencilla y divertida del tradicional ahorcado con HTML, CSS y JavaScript.',
           memoria: 'Juego de la Memoria',
           memoria_desc: 'Desafía tu memoria con este juego web hecho en JavaScript.',
           snake_desc: 'Implementación del Snake clásico usando JavaScript y canvas, con lógica de colisión, puntuación y aumento de velocidad.',
           tetris_desc: 'Arma líneas, rompe récords y sobrevive al caos en este Tetris hecho en JavaScript.',
-          batalla_naval: 'Batalla Naval',
-          batalla_naval_desc: '¡Apuntá, dispará y hundí barcos enemigos en este clásico de Batalla Naval hecho con Python y mucha puntería!',
-          py_desc: 'Este es un ejemplo para probar el uso de PyScript.',
+          down_video: 'Descarga Videos',
+          down_video_desc: 'Este script en Python permite descargar videos de YouTube en la mejor calidad disponible usando la librería pytube',
+          n_battle: 'Batalla Naval',
+          n_battle_desc: '¡Apuntá, dispará y hundí barcos enemigos en este clásico de Batalla Naval hecho con Python y mucha puntería!',
+          
           csv_desc: 'Exploración de datos de un archivo CSV con pandas.',
           viz_desc: 'Gráficos con matplotlib y seaborn sobre dataset real.',
           ver: 'Ver',
           btn_example: 'Ejemplo',
+          btn_ver_code: 'Ver Código',
           btn_code: 'Descargar Código',
           h_contact: 'Contacto',
           contact_pitch: '¿Trabajamos juntos? Escribime:',
@@ -354,19 +421,30 @@
           cronometro_desc: 'Try this stopwatch and become a time ninja! 🕒',
           firma: 'Signature',
           firma_desc: 'With this script you will turn your mouse into a magic pen to create your signature or drawing! 🖋️',
+          cronometro_marca: 'Stopwatch with Flags',
+          cronometro_marca_desc: 'This script is a ninja stopwatch that starts, pauses, times like a pro, and resets with style! 🕒',
+          temporizador: 'Timer',
+          temporizador_desc: '⏳ A simple yet powerful timer that alerts you with an audible tone when time is up, so you do not miss a second!',
+          pass: 'Password Generator',
+          pass_desc: '🔐 This password generator scrambles symbols, letters, and numbers like a digital security expert!',
+          forte_pass: 'Configurable Password Generator',
+          forte_pass_desc: 'Custom password generator that lets you choose the character type and copy the result to the clipboard with a single click.',
           ahorcado: 'Hangman',
           ahorcado_desc: 'Simple and fun implementation of the traditional hangman using HTML, CSS and JavaScript.',
           memoria: 'Memory Game',
           memoria_desc: 'Challenge your memory with this JavaScript web game.',
           snake_desc: 'Implementation of the classic Snake using JavaScript and canvas, with collision logic, scoring and speed increase.',
           tetris_desc: 'Build lines, break records and survive chaos in this Tetris made in JavaScript.',
-          batalla_naval: 'Naval Battle',
-          batalla_naval_desc: 'Aim, shoot and sink enemy ships in this classic Naval Battle made with Python and lots of aim!',
+          down_diveo: 'Download Videos',
+          down_diveo_desc: 'This Python script allows you to download YouTube videos in the best quality available using the pytube library.',
+          n_battle: 'Naval Battle',
+          n_battle_desc: 'Aim, shoot and sink enemy ships in this classic Naval Battle made with Python and lots of aim!',
           py_desc: 'This is an example to test PyScript usage.',
           csv_desc: 'Exploration of a CSV file using pandas.',
           viz_desc: 'Graphs with matplotlib and seaborn over a real dataset.',
           ver: 'See',
           btn_example: 'Example',
+          btn_ver_code: 'See Code',
           btn_code: 'Get Code',
           h_contact: 'Contact',
           contact_pitch: "Shall we work together? Message me and I'll gladly share portfolio and projects.",
