--- a/Scripts_JS/cronometro_marca/index.html
+++ b/Scripts_JS/cronometro_marca/index.html
@@ -16,6 +16,14 @@
 		#tiempoTranscurrido {
 			font-size: 4rem;
 		}
+		#credits {
+			color: #DDC9B4;
+			font-size: 1.5em;
+			text-align: center;
+			margin-top: 15px;
+			font-style: italic;
+			letter-spacing: 0.5px;
+		}
 	</style>
 </head>
 
@@ -33,6 +41,7 @@
 				</div>
 			</div>
 		</div>
+		<div id="credits"></div>
 	</section>
 
 	<script src="script.js"></script>
