--- a/Scripts_JS/forte_pass/index.html
+++ b/Scripts_JS/forte_pass/index.html
@@ -171,6 +171,15 @@ input[type="checkbox"]:checked + label.check-label:before {
     background: #00e676;
     transition: all 0.3s cubic-bezier(0, 0.82, 1, 1.81);
 }
+
+#credits {
+			color: #DDC9B4;
+			font-size: 1.5em;
+			text-align: center;
+			margin-top: 15px;
+			font-style: italic;
+			letter-spacing: 0.5px;
+}
 </style>
 </head>
 
@@ -232,6 +241,7 @@ input[type="checkbox"]:checked + label.check-label:before {
     
     <button class="generate" id="generate">Generar!</button>
   </div>
+  <div id="credits"></div>
   </div>
 </div>
 
